# Proserpina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  book.toml  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.pi/: superpowers-state.json
book/src/: SUMMARY.md  getting-started.md  introduction.md
book/src/api/: agent-info.md  agent.md  backends.md  credentials.md  errors.md  graph.md  message.md  overview.md  persona.md  report.md  roster.md  runner.md  subject.md  summarizer.md
book/src/concepts/: findings.md  graph.md  personas.md
book/src/design/: docs.md  overview.md
book/src/examples/: multi-critic.md
book/src/guide/: agent-integration.md  feature-flags.md  installation.md  panels.md  providers.md  reliability.md
book/src/security/: considerations.md
docs/: ROADMAP.md  critique.md
docs/plans/: 2026-06-19-praxis-design.md  2026-06-19-proserpina-design.md  2026-06-21-agent-readiness-design.md  2026-06-21-credentials-config-design.md  2026-06-21-multi-provider-roster-design.md  2026-06-21-panels-design.md  2026-06-21-rich-findings-design.md  2026-06-23-release-prep.md  2026-06-23-retry-design.md  2026-06-28-auth-and-human-cli.md
examples/: deepseek_smoke.rs  library_usage.rs  panel_smoke.rs
src/: agent.rs  agent_info.rs  error.rs  graph.rs  lib.rs  main.rs  message.rs  persona.rs  report.rs  runner.rs  subject.rs  summary.rs  transcript.rs
src/backend/: credentials.rs  echo.rs  http.rs  mod.rs  roster.rs
src/cli/: critique.rs  mod.rs
tests/: agent_readiness.rs  auth_and_cli.rs  cli.rs  cli_json.rs  cli_roster.rs  core_data_model.rs  credentials.rs  echo_backend.rs  graph_runner.rs  http_backend.rs  keyring.rs  panels.rs  report.rs  retry.rs  rich_findings.rs  roster.rs
