[package]
name = "proserpina"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Multi-agent critique and cross-examination pipeline for documents requiring intellectual rigor — provider-agnostic interaction-graph engine with pluggable LLM backends"
license = "AGPL-3.0-only"
repository = "https://github.com/industrial-algebra/Proserpina"
homepage = "https://github.com/industrial-algebra/Proserpina"
documentation = "https://docs.rs/proserpina"
keywords = ["multi-agent", "critique", "peer-review", "llm", "evaluation"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
readme = "README.md"

[features]
default = ["std"]
std = []
# Additive capability features (landed incrementally via TDD):
cli = ["dep:clap"]                   # `proserpina` binary + clap command line interface
serde = ["dep:serde"]                # Serialize/Deserialize impls for core types
json = ["serde", "dep:serde_json"]   # machine-readable JSON report output
backend-http = ["serde", "dep:reqwest", "dep:tokio", "dep:serde_json", "dep:rand", "dep:toml"]  # OpenAI-compatible HTTP agent + multi-provider roster + credentials config
keyring = ["dep:keyring", "backend-http"]  # OS keychain credential tier (keyring > env > config > registry); works on macOS Keychain + Windows Credential Manager, Linux gnome-keyring has a known limitation
# parallel = ["dep:rayon"]           # batch critique via rayon (future)

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
rand = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
keyring = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "io-util"] }

[[bin]]
name = "proserpina"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "deepseek_smoke"
required-features = ["backend-http"]

[[example]]
name = "panel_smoke"
required-features = ["backend-http", "cli"]

[[example]]
name = "library_usage"
